--- a/hu_wuhu_rn.adoc
+++ b/hu_wuhu_rn.adoc
@@ -93,4 +93,4 @@ You can access documentation for all NetApp products and find other product info
 * The SANtricity Storage Manager Multipath driver's guide specific for your version of SANtricity.
 * The SANtricity Storage Manager Release Notes for your version of SANtricity.
 
-See the link:https://docs.netapp.com/us-en/e-series/index.html[E-Series documentation^] to find SANtricity related documentation.
+See the link:https://docs.netapp.com/us-en/e-series-family/[E-Series documentation^] to find SANtricity related documentation.
