--- a/nvme_ol_90.adoc
+++ b/nvme_ol_90.adoc
@@ -171,6 +171,11 @@ Total FCP Cmpl 000000002e14f170 Issue 000000002e14f17a OutIO 000000000000000a
 abort 000016bb noxri 00000000 nondlp 00000000 qdepth 00000000 wqerr 00000000 err 00000000
 FCP CMPL: xb 00001f50 Err 0000d9f8
 ----
+
+.Enable 1MB I/O size
+
+include::_include/nvme/reuse_nvme_enabling_broadcom_1mb_size.adoc[]
+
 --
 
 .Marvell/QLogic FC Adapter for NVMe/FC
@@ -285,9 +290,6 @@ nvme connect-all -t tcp -w host-traddr -a traddr -l 1800
 # nvme connect-all -t tcp -w 192.168.6.13 -a 192.168.6.17 -l 1800
 ----
 
-===	Enable 1MB I/O size
-
-include::_include/nvme/reuse_nvme_enabling_broadcom_1mb_size.adoc[]
 
 
 == Validate NVMe-oF
